--- a/paper/Congruence.lagda.tex
+++ b/paper/Congruence.lagda.tex
@@ -1,7 +1,9 @@
 \begin{code}[hide]
 {-# OPTIONS --rewriting #-}
-open import Data.Product using (_×_; _,_; ∃; ∃-syntax)
-open import Data.List.Base using (List; []; _∷_; [_]; _++_)
+open import Data.Unit using (tt)
+open import Data.Sum using (inj₁; inj₂)
+open import Data.Product using (_,_)
+open import Data.List.Base using ([]; _∷_; [_])
 
 open import Type
 open import Context
@@ -18,7 +20,7 @@ structural precongruence preserves typing by definition.
 
 \begin{AgdaAlign}
 \begin{code}
-data _⊒_ {Γ} : Process Γ → Process Γ → Set where
+data _⊒_ {Γ} : Proc Γ → Proc Γ → Set where
 \end{code}
 
 The datatype for $\pcong$ has one constructor for each of the structural
@@ -29,13 +31,12 @@ repeatedly, we will focus on just a few representative rules starting from
 \begin{code}
   s-comm :
     ∀{A Γ₁ Γ₂ P Q} (p : Γ ≃ Γ₁ + Γ₂) →
-    cut {A} p P Q ⊒ cut (+-comm p) Q P
+    cut {A} (P ⟨ p ⟩ Q) ⊒ cut (Q ⟨ +-comm p ⟩ P)
 \end{code}
 
 The constructor \AgdaInductiveConstructor{s-comm} models the commutativity
 property of parallel composition. We use \AgdaFunction{+-comm} to compute the
-proof of the splitting $\Splitting\ContextC{\Context_2}{\Context_1}$ from $p$
-respectively.
+proof of the splitting $\Splitting\ContextC{\Context_2}{\Context_1}$ from $p$.
 %
 Notice that this constructor also makes key use of the implicit rewriting rule
 \AgdaFunction{dual-inv} described in \Cref{sec:type-agda}. Indeed $P$ and $Q$
@@ -50,20 +51,22 @@ intricate substitutions in the index of a data type.
 
 \begin{code}[hide]
   s-link :
-    ∀{A} (p : Γ ≃ [ A ] + [ dual A ]) → link p ⊒ link (+-comm p)
+    ∀{A} (p : Γ ≃ [ A ] + [ dual A ]) →
+    link (ch ⟨ p ⟩ ch) ⊒ link (ch ⟨ +-comm p ⟩ ch)
   s-fail :
-    ∀{A Γ₁ Γ₂ Δ P} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ ⊤ ⊳ Δ) →
+    ∀{A Γ₁ Γ₂ Δ P} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ ⊤ ] + Δ) →
     let _ , _ , q′ = +-assoc-l p q in
-    cut {A} p (fail (> q)) P ⊒ fail q′
+    cut {A} (fail (ch ⟨ > q ⟩ tt) ⟨ p ⟩ P) ⊒ fail (ch ⟨ q′ ⟩ tt)
 \end{code}
 
 The constructor \AgdaInductiveConstructor{s-wait} models the \SWait rule:
 
 \begin{code}
   s-wait :
-    ∀{Γ₁ Γ₂ Δ A P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ ⊥ ⊳ Δ) →
+    ∀{Γ₁ Γ₂ Δ A P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ ⊥ ] + Δ) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {A} p (wait (> q) P) Q ⊒ wait q′ (cut p′ P Q)
+    cut {A} (wait (ch ⟨ > q ⟩ P) ⟨ p ⟩ Q) ⊒
+    wait (ch ⟨ q′ ⟩ cut (P ⟨ p′ ⟩ Q))
 \end{code}
 
 There are two non-trivial aspects worth commenting. The first one concerns the
@@ -73,9 +76,9 @@ applied. To understand the meaning of this proof, we must recall three key
 elements:
 \begin{enumerate}
   \item
-    $(\AgdaInductiveConstructor{wait}~(\AgdaInductiveConstructor{>}~q)~P)$ is a
-    direct sub-process of the \AgdaInductiveConstructor{cut}, and therefore it
-    is meant to be well typed in the context
+    $(\AgdaInductiveConstructor{wait}~(\AgdaInductiveConstructor{ch~⟨~>}~q~\AgdaInductiveConstructor{⟩}~P)$
+    is a direct sub-process of the \AgdaInductiveConstructor{cut}, and therefore
+    it is meant to be well typed in the context
     $A~\AgdaInductiveConstructor{∷}~\Context_1$.
   \item Being a \AgdaInductiveConstructor{wait} process, such context must
     contain a $\Bot$ type as per the typing rule \WaitRule. That is
@@ -98,75 +101,82 @@ Overall, $p$ and $q$ prove the splittings $([\Bot] + \ContextD) + \ContextC_2$,
 but the precongruence rule requires this splitting to be rearranged as $[\Bot] +
 (\ContextD + \ContextC_2)$. That is, we need to apply the left-to-right
 associativity property of context splitting which we called
-\AgdaFunction{+-assoc-l} in \Cref{sec:context-agda}. The nested
-\AgdaKeyword{let}-\AgdaKeyword{in} allows us to pattern match the result of the
-application $\AgdaFunction{+-assoc-l}~p~q$ and to extract the new proofs $p'$
-and $q'$ for the rearranged splittings.
+\AgdaFunction{+-assoc-l} in \Cref{sec:context-agda}.\Luca{Controllare
+left/right.} The nested \AgdaKeyword{let}-\AgdaKeyword{in} allows us to pattern
+match the result of the application $\AgdaFunction{+-assoc-l}~p~q$ and to
+extract the new proofs $p'$ and $q'$ for the rearranged splittings.
 
-The constructors \AgdaInductiveConstructor{s-left} and
-\AgdaInductiveConstructor{s-right} model \SSelect when the selected tag is
-respectively $\Tag_1$ and $\Tag_2$.
+The constructors \AgdaInductiveConstructor{s-select-l} and
+\AgdaInductiveConstructor{s-select-r} model \SSelect when the selected tag is
+respectively $\InTag_1$ and $\InTag_2$.\Luca{Controllare nomi dei tag con
+sintassi del calcolo. Chiamarli inj come in Agda così c'è consistenza?}
+%
+For example, for \AgdaInductiveConstructor{s-select-l} we have:
 
 \begin{code}[hide]
   s-case :
-    ∀{A B C Γ₁ Γ₂ Δ P Q R} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ B & C ⊳ Δ) →
+    ∀{A B C Γ₁ Γ₂ Δ P Q R} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ B & C ] + Δ) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {A} p (case (> q) P Q) R ⊒ case q′ (cut (< p′) (↭process swap P) R)
-                                           (cut (< p′) (↭process swap Q) R)
+    cut {A} (case (ch ⟨ > q ⟩ (P , Q)) ⟨ p ⟩ R) ⊒
+    case (ch ⟨ q′ ⟩ (cut (↭proc swap P ⟨ < p′ ⟩ R) ,
+                     cut (↭proc swap Q ⟨ < p′ ⟩ R)))
 \end{code}
 \begin{code}
-  s-left :
-    ∀{Γ₁ Γ₂ Δ A B C P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ B ⊕ C ⊳ Δ) →
+  s-select-l :
+    ∀{Γ₁ Γ₂ Δ A B C P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ B ⊕ C ] + Δ) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {A} p (left (> q) P) Q ⊒ left q′ (cut (< p′) (↭process swap P) Q)
+    cut {A} (select (ch ⟨ > q ⟩ inj₁ P) ⟨ p ⟩ Q) ⊒
+    select (ch ⟨ q′ ⟩ inj₁ (cut (↭proc swap P ⟨ < p′ ⟩ Q)))
 \end{code}
 \begin{code}[hide]
-  s-right :
-    ∀{Γ₁ Γ₂ Δ A B C P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ B ⊕ C ⊳ Δ) →
+  s-select-r :
+    ∀{Γ₁ Γ₂ Δ A B C P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ B ⊕ C ] + Δ) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {A} p (right (> q) P) Q ⊒ right q′ (cut (< p′) (↭process swap P) Q)
+    cut {A} (select (ch ⟨ > q ⟩ inj₂ P) ⟨ p ⟩ Q) ⊒
+    select (ch ⟨ q′ ⟩ inj₂ (cut (↭proc swap P ⟨ < p′ ⟩ Q)))
 \end{code}
 
 Here the process
-$(\AgdaInductiveConstructor{left}~(\AgdaInductiveConstructor{>}~q)~P)$, which is
+$(\AgdaInductiveConstructor{select}~(\AgdaInductiveConstructor{ch ⟨
+>}~q~\AgdaInductiveConstructor{⟩})~\AgdaInductiveConstructor{inj₁}~P)$, which is
 found under a cut for $x : A$, is using some channel $y : B \Plus C$ to send the
-tag $\Tag_1$.
+tag $\InTag_1$.
 %
 Unlike \AgdaInductiveConstructor{wait}, which consumes the channel it operates
-on, the continuation process $P$ will be using a fresh continuation channel $z :
-B$. Therefore, $P$ is required to be well typed in the context
+on, the continuation process $P$ uses a fresh continuation channel $z : B$.
+Therefore, $P$ is required to be well typed in the context
 $B~\AgdaInductiveConstructor{∷}~A~\AgdaInductiveConstructor{∷}~\ContextD$, where
 the type of the continuation sits on top of the type of the restricted channel.
 %
 After structural precongruence is applied, however, the type $B$ of the
 continuation channel $z$ ends up underneath that of the restricted channel $x$,
 because now the two channels are introduced in the opposite order. Therefore, we
-are in a situation where we need to turn $P$ into a process that is well typed
-in the context
-$A~\AgdaInductiveConstructor{∷}~B~\AgdaInductiveConstructor{∷}~\ContextD$. This
-is achieved applying the function \AgdaFunction{↭process} to the
+need to rename the channels in $P$ so that it is well typed in the context
+$A~\AgdaInductiveConstructor{∷}~B~\AgdaInductiveConstructor{∷}~\ContextD$. Such
+renaming is achieved applying the function \AgdaFunction{↭proc} to the
 \AgdaInductiveConstructor{swap} permutation, which swaps the two topmost types
 in a typing context, and finally to the process $P$.
 
-We also show the modeling of the \SForkL rule, which is interesting because of
-its complex side conditions:
-
 \begin{code}[hide]
   s-join :
-    ∀{Γ₁ Γ₂ Δ A B C P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ B ⅋ C ⊳ Δ) →
+    ∀{Γ₁ Γ₂ Δ A B C P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ B ⅋ C ] + Δ) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {A} p (join (> q) P) Q ⊒
-    join q′ (cut (< < p′) (↭process (↭shift {A} {C ∷ B ∷ []}) P) Q)
+    cut {A} (join (ch ⟨ > q ⟩ P) ⟨ p ⟩ Q) ⊒
+    join (ch ⟨ q′ ⟩ cut (↭proc (↭shift {A} {C ∷ B ∷ []}) P ⟨ < < p′ ⟩ Q))
 \end{code}
+
+We also discuss the modeling of the \SForkL rule, which is interesting because of
+its complex side conditions:
+
 \begin{code}
   s-fork-l :
     ∀{Γ₁ Γ₂ Δ Δ₁ Δ₂ A B C P Q R}
-    (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ B ⊗ C ⊳ Δ) (r : Δ ≃ Δ₁ + Δ₂) →
+    (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ B ⊗ C ] + Δ) (r : Δ ≃ Δ₁ + Δ₂) →
     let _ , p′ , q′ = +-assoc-l p q in
     let _ , p′′ , r′ = +-assoc-l p′ r in
     let _ , q′′ , r′′ = +-assoc-r r′ (+-comm p′′) in
-    cut {A} p (fork (> q) (< r) P Q) R ⊒
-    fork q′ r′′ (cut (< q′′) (↭process swap P) R) Q
+    cut {A} (fork (ch ⟨ > q ⟩ (P ⟨ < r ⟩ Q)) ⟨ p ⟩ R) ⊒
+    fork (ch ⟨ q′ ⟩ (cut (↭proc swap P ⟨ < q′′ ⟩ R) ⟨ r′′ ⟩ Q))
 \end{code}
 
 Recall from \Cref{tab:semantics} that we want to apply this rule on a process of
@@ -184,39 +194,42 @@ $(\AgdaInductiveConstructor{>}~r)$.
 \begin{code}[hide]
   s-fork-r :
     ∀{Γ₁ Γ₂ Δ Δ₁ Δ₂ A B C P Q R}
-    (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ B ⊗ C ⊳ Δ) (r : Δ ≃ Δ₁ + Δ₂) →
+    (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ B ⊗ C ] + Δ) (r : Δ ≃ Δ₁ + Δ₂) →
     let _ , p′ , q′ = +-assoc-l p q in
     let _ , p′′ , r′ = +-assoc-l p′ r in
-    cut {A} p (fork (> q) (> r) P Q) R ⊒
-    fork q′ r′ P (cut (< p′′) (↭process swap Q) R)
+    cut {A} (fork (ch ⟨ > q ⟩ (P ⟨ > r ⟩ Q)) ⟨ p ⟩ R) ⊒
+    fork (ch ⟨ q′ ⟩ (P ⟨ r′ ⟩ cut (↭proc swap Q ⟨ < p′′ ⟩ R)))
   s-all :
-    ∀{A B Γ₁ Γ₂ Δ F Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ `∀ B ⊳ Δ) ->
-    let _ , p' , q' = +-assoc-l p q in
-    cut {A} p (all (> q) F) Q ⊒ all q' λ σ → cut (< p') (↭process swap (F σ)) Q
+    ∀{A B Γ₁ Γ₂ Δ F Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ `∀ B ] + Δ) ->
+    let _ , p′ , q′ = +-assoc-l p q in
+    cut {A} (all (ch ⟨ > q ⟩ F) ⟨ p ⟩ Q) ⊒
+    all (ch ⟨ q′ ⟩ λ X → cut (↭proc swap (F X) ⟨ (< p′) ⟩ Q))
   s-ex :
-    ∀{A B C Γ₁ Γ₂ Δ P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ `∃ B ⊳ Δ) ->
-    let _ , p' , q' = +-assoc-l p q in
-    cut {A} p (ex {_} {C} (> q) P) Q ⊒ ex q' (cut (< p') (↭process swap P) Q)
+    ∀{A B C Γ₁ Γ₂ Δ P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ `∃ B ] + Δ) ->
+    let _ , p′ , q′ = +-assoc-l p q in
+    cut {A} (ex {_} {C} (ch ⟨ > q ⟩ P) ⟨ p ⟩ Q) ⊒
+    ex (ch ⟨ q′ ⟩ cut (↭proc swap P ⟨ < p′ ⟩ Q))
   s-server :
     ∀{A B Γ₁ Γ₂ Δ₁ P Q}
-    (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ `! B ⊳ Δ₁) (r : Γ₂ ≃ [] + Γ₂)
+    (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ `! B ] + Δ₁) (r : Γ₂ ≃ [] + Γ₂)
     (un₁ : Un Δ₁) (un₂ : Un Γ₂) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {`? A} p (server (> q) (un-∷ un₁) P) (server (< r) un₂ Q) ⊒
-    server q′ (+-un p′ un₁ un₂) (cut (< p′) (↭process swap P) (server (< r) un₂ Q))
+    cut {`? A} (server (ch ⟨ > q ⟩ (un-∷ un₁ , P)) ⟨ p ⟩ server (ch ⟨ < r ⟩ (un₂ , Q))) ⊒
+    server (ch ⟨ q′ ⟩ (∗-un (un₁ ⟨ p′ ⟩ un₂) , cut (↭proc swap P ⟨ (< p′) ⟩ server (ch ⟨ < r ⟩ (un₂ , Q)))))
   s-client :
-    ∀{A B Γ₁ Γ₂ Δ P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ `? B ⊳ Δ) →
+    ∀{A B Γ₁ Γ₂ Δ P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ `? B ] + Δ) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {A} p (client (> q) P) Q ⊒ client q′ (cut (< p′) (↭process swap P) Q)
+    cut {A} (client (ch ⟨ > q ⟩ P) ⟨ p ⟩ Q) ⊒
+    client (ch ⟨ q′ ⟩ cut (↭proc swap P ⟨ < p′ ⟩ Q))
   s-weaken :
-    ∀{A B Γ₁ Γ₂ Δ P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ `? B ⊳ Δ) →
+    ∀{A B Γ₁ Γ₂ Δ P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ `? B ] + Δ) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {A} p (weaken (> q) P) Q ⊒ weaken q′ (cut p′ P Q)
+    cut {A} (weaken (ch ⟨ (> q) ⟩ P) ⟨ p ⟩ Q) ⊒ weaken (ch ⟨ q′ ⟩ cut (P ⟨ p′ ⟩ Q))
   s-contract :
-    ∀{A B Γ₁ Γ₂ Δ P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ∋ `? B ⊳ Δ) →
+    ∀{A B Γ₁ Γ₂ Δ P Q} (p : Γ ≃ Γ₁ + Γ₂) (q : Γ₁ ≃ [ `? B ] + Δ) →
     let _ , p′ , q′ = +-assoc-l p q in
-    cut {A} p (contract (> q) P) Q ⊒
-    contract q′ (cut (< < p′) (↭process (↭shift {A} {`? B ∷ `? B ∷ []}) P) Q)
+    cut {A} (contract (ch ⟨ > q ⟩ P) ⟨ p ⟩ Q) ⊒
+    contract (ch ⟨ q′ ⟩ cut (↭proc (↭shift {A} {`? B ∷ `? B ∷ []}) P ⟨ < < p′ ⟩ Q))
 \end{code}
 
 Finally, in \Cref{sec:semantics} we have colloquially defined $\pcong$ as a
@@ -228,7 +241,7 @@ have to be precise and we introduce specific rules:
   s-refl  : ∀{P} → P ⊒ P
   s-tran  : ∀{P Q R} → P ⊒ Q → Q ⊒ R → P ⊒ R
   s-cong  : ∀{Γ₁ Γ₂ A P Q P′ Q′} (p : Γ ≃ Γ₁ + Γ₂) →
-            P ⊒ Q → P′ ⊒ Q′ → cut {A} p P P′ ⊒ cut p Q Q′
+            P ⊒ Q → P′ ⊒ Q′ → cut {A} (P ⟨ p ⟩ P′) ⊒ cut (Q ⟨ p ⟩ Q′)
 \end{code}
 
 Note that we define a single congruence rule \AgdaInductiveConstructor{s-cong}
