--- a/paper/Process.lagda.tex
+++ b/paper/Process.lagda.tex
@@ -70,8 +70,8 @@ data Proc : Context → Set where
   fork      : ∀{A B} →
               ∀[ Ch (A ⊗ B) ∗ ((A ∷_) ⊢ Proc) ∗ ((B ∷_) ⊢ Proc) ⇒ Proc ]
   all       : ∀{A} →
-              ∀[ Ch (`∀ A) ∗ ⋂[ X ∶ Type ] ((subst [ X /_] A ∷_) ⊢ Proc) ⇒ Proc ]
-  ex        : ∀{A B} → ∀[ Ch (`∃ A) ∗ ((subst [ B /_] A ∷_) ⊢ Proc) ⇒ Proc ]
+              ∀[ Ch (`∀ A) ∗ ⋂[ X ∶ Type ] ((subst [ X /] A ∷_) ⊢ Proc) ⇒ Proc ]
+  ex        : ∀{A B} → ∀[ Ch (`∃ A) ∗ ((subst [ B /] A ∷_) ⊢ Proc) ⇒ Proc ]
   server    : ∀{A} → ∀[ Ch (`! A) ∗ (Un ∩ ((A ∷_) ⊢ Proc)) ⇒ Proc ]
   client    : ∀{A} → ∀[ Ch (`? A) ∗ ((A ∷_) ⊢ Proc) ⇒ Proc ]
   weaken    : ∀{A} → ∀[ Ch (`? A) ∗ Proc ⇒ Proc ]
@@ -140,17 +140,17 @@ would have to do in a ``true'' session type system without explicit continuation
 channels.
 
 The interpretation of the remaining constructors is analogous, so we only
-comment \AgdaInductiveConstructor{all}, which represents a process
+comment \AgdaInductiveConstructor{all}, which represents a polymorphic process
 $\Forall\x\X\y.P$. This constructor models the continuation $P$ using
 higher-order abstract syntax (HOAS~\cite{}): witnessing that a context
 $\Context$ satisfies the predicate
 \[
-  \AgdaFunction{⋂[}~X~\AgdaFunction{∶}~\AgdaDatatype{Type}~\AgdaFunction]~((\AgdaFunction{subst~[}~X~\AgdaFunction{/\_]}~A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}
+  \AgdaFunction{⋂[}~X~\AgdaFunction{∶}~\AgdaDatatype{Type}~\AgdaFunction]~((\AgdaFunction{subst~[}~X~\AgdaFunction{/]}~A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}
 \]
 means providing a function that, for every type $X$, produces a witness for the
 predicate
 \[
-  ((\AgdaFunction{subst~[}~X~\AgdaFunction{/\_]}~A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}
+  ((\AgdaFunction{subst~[}~X~\AgdaFunction{/]}~A~\AgdaInductiveConstructor{∷\_})~\AgdaFunction{⊢}~\AgdaDatatype{Proc}
 \]
 applied to $\Context$. Note that the side condition $X \not\in \fv\Context$ of
 \ForallRule is enforced \emph{by definition}:
@@ -161,9 +161,9 @@ a typing context, that is a list of $\AgdaDatatype{Type} =
 \AgdaDatatype{PreType}~\AgdaInductiveConstructor{0}$ without free type
 variables. Therefore, $X$ cannot occur in $\Context$.
 
-We conclude this module proving that permutations preserve process typeability.
-Since list permutations basically correspond to channel renaming, we can read
-this property as the fact that typeability is preserved by (injective) name
+We conclude this module proving that permutations preserve process typing. Since
+list permutations basically correspond to channel renaming, we can read this
+property as the fact that typing is preserved by (injective) name
 substitutions.\Luca{Abbiamo detto da qualche parte dove emergono gli indici di
 de Bruijn e di fare attenzione al fatto che lo splitting li altera? Serve questa
 digressione?}\Luca{Da qualche parte mettere un remark per far notare che l'uso
