--- a/paper/main.tex
+++ b/paper/main.tex
@@ -86,7 +86,7 @@
 
 \begin{document}
 
-\title{A Splitting Solution of the Linearity Challenge}
+\title{A Linear Solution of the Linearity Challenge}
 
 %%=============================================================%%
 %% GivenName	-> \fnm{Joergen W.}
