--- a/paper/Reduction.lagda.tex
+++ b/paper/Reduction.lagda.tex
@@ -1,10 +1,11 @@
 \begin{code}[hide]
 {-# OPTIONS --rewriting #-}
-open import Data.Bool using (Bool; true; false; if_then_else_)
-open import Data.Product using (_×_; _,_; ∃; Σ; Σ-syntax; ∃-syntax)
-open import Relation.Binary.PropositionalEquality using (_≡_; refl; sym; cong; cong₂)
-open import Data.List.Base using (List; []; _∷_; [_]; _++_)
+open import Data.Sum using (inj₁; inj₂)
+open import Data.Product using (_,_)
+open import Data.List.Base using ([]; _∷_; [_]; _++_)
 open import Data.List.Properties using (++-assoc)
+open import Relation.Unary
+open import Relation.Binary.PropositionalEquality using (sym)
 
 open import Type
 open import Context
@@ -17,22 +18,22 @@ open import Congruence
 \label{sec:reduction-agda}
 
 \begin{code}[hide]
-weakening : ∀{Γ Γ₁ Γ₂} (un : Un Γ₁) → Γ ≃ Γ₁ + Γ₂ → Process Γ₂ → Process Γ
-weakening un p P = ↭process (↭concat p) (aux un P)
+weakening : ∀[ Un ∗ Proc ⇒ Proc ]
+weakening (un ⟨ p ⟩ P) = ↭proc (↭concat p) (aux un P)
   where
-    aux : ∀{Γ₁ Γ₂} (un : Un Γ₁) → Process Γ₂ → Process (Γ₁ ++ Γ₂)
+    aux : ∀{Γ₁ Γ₂} (un : Un Γ₁) → Proc Γ₂ → Proc (Γ₁ ++ Γ₂)
     aux un-[] P = P
-    aux (un-∷ un) P = weaken (< ≫) (aux un P)
+    aux (un-∷ un) P = weaken (ch ⟨ < ≫ ⟩ aux un P)
 
-contraction : ∀{Γ Γ₁ Γ₂} (un : Un Γ₁) → Γ ≃ Γ₁ + Γ₂ → Process (Γ₁ ++ Γ) → Process Γ
-contraction un p P = ↭process (↭concat p) (aux un (↭process (↭left (↭sym (↭concat p))) P))
+contraction : ∀{Γ Γ₁ Γ₂} (un : Un Γ₁) → Γ ≃ Γ₁ + Γ₂ → Proc (Γ₁ ++ Γ) → Proc Γ
+contraction un p P = ↭proc (↭concat p) (aux un (↭proc (↭left (↭sym (↭concat p))) P))
   where
-    aux : ∀{Γ₁ Γ₂} → Un Γ₁ → Process (Γ₁ ++ Γ₁ ++ Γ₂) → Process (Γ₁ ++ Γ₂)
+    aux : ∀{Γ₁ Γ₂} → Un Γ₁ → Proc (Γ₁ ++ Γ₁ ++ Γ₂) → Proc (Γ₁ ++ Γ₂)
     aux un-[] P = P
-    aux {`? A ∷ Γ₁} {Γ₂} (un-∷ un) P with contract (< ≫) (↭process (↭shift {`? A} {`? A ∷ Γ₁} {Γ₁ ++ Γ₂}) P)
-    ... | P₁ rewrite sym (++-assoc (`? A ∷ Γ₁) Γ₁ Γ₂) with ↭process (↭sym (↭shift {`? A} {Γ₁ ++ Γ₁})) P₁
+    aux {`? A ∷ Γ₁} {Γ₂} (un-∷ un) P with contract (ch ⟨ < ≫ ⟩ (↭proc (↭shift {`? A} {`? A ∷ Γ₁} {Γ₁ ++ Γ₂}) P))
+    ... | P₁ rewrite sym (++-assoc (`? A ∷ Γ₁) Γ₁ Γ₂) with ↭proc (↭sym (↭shift {`? A} {Γ₁ ++ Γ₁})) P₁
     ... | P₂ rewrite ++-assoc Γ₁ Γ₁ (`? A ∷ Γ₂) with aux un P₂
-    ... | P₃ = ↭process ↭shift P₃
+    ... | P₃ = ↭proc ↭shift P₃
 \end{code}
 
 Just like structural precongruence, reduction is formalized as a binary relation
@@ -40,7 +41,7 @@ between processes that are well typed in the very same typing context. Thus, the
 definition of reduction embeds the subject reduction result.
 
 \begin{code}
-data _↝_ {Γ} : Process Γ → Process Γ → Set where
+data _↝_ {Γ} : Proc Γ → Proc Γ → Set where
 \end{code}
 
 There is a constructor for each of the reduction rules in \Cref{tab:semantics}.
@@ -52,7 +53,7 @@ $\Cut[A]\x{\Link\x\y}{P} \red P\subst\y\x$ called \RLink in
 
 \begin{code}
   r-link      : ∀{Δ A P} (p : Γ ≃ [ dual A ] + Δ) →
-                cut {A} p (link (< > •)) P ↝ ↭process (↭concat p) P
+                cut {A} (link (ch ⟨ < > • ⟩ ch) ⟨ p ⟩ P) ↝ ↭proc (↭concat p) P
 \end{code}
 
 The splitting $p$ indicates that $y$ (of type $\dual{A}$) occurs on the left
@@ -63,7 +64,7 @@ with the syntax of the link $\Link\x\y$ being reduced, which is oriented so that
 the restricted channel $x$ occurs on the left. 
 %
 The process $P$ has type
-$\AgdaDatatype{Process}~(\AgdaFunction{dual}~A~\AgdaInductiveConstructor{∷}~\ContextD)$,
+$\AgdaDatatype{Proc}~(\AgdaFunction{dual}~A~\AgdaInductiveConstructor{∷}~\ContextD)$,
 and turns into $P\subst\y\x$ after the reduction. The type
 $\AgdaFunction{dual}~A$ of $x$ in $P$ is the first in the typing context,
 indicating that it is the newest channel that $P$ is aware of. However, after
@@ -75,8 +76,8 @@ $\AgdaFunction{↭concat}~p$.
 The constructor \AgdaInductiveConstructor{r-close} models \RClose:
 
 \begin{code}
-  r-close     : ∀{P} (p₀ : Γ ≃ [] + Γ) (q₀ : Γ ≃ [] + Γ) →
-                cut p₀ close (wait (< q₀) P) ↝ P
+  r-close     : ∀{P} (p₀ q₀ : Γ ≃ [] + Γ) →
+                cut (close ch ⟨ p₀ ⟩ wait (ch ⟨ < q₀ ⟩ P)) ↝ P
 \end{code}
 
 While the \AgdaInductiveConstructor{close} constructor implicitly refers to the
@@ -96,70 +97,70 @@ they are definitionally equal, hence it is easier to quantify them separately so
 that we do not have to worry about proving their equality whenever we wish to
 apply this reduction.
 
-The constructor \AgdaInductiveConstructor{r-left} models \RSelect when the
+The constructor \AgdaInductiveConstructor{r-select-l} models \RSelect when the
 selected tag is $\InTag_1$:
 
 \begin{code}
-  r-left      : ∀{Γ₁ Γ₂ A B P Q R}
+  r-select-l  : ∀{Γ₁ Γ₂ A B P Q R}
                 (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) →
-                cut {A ⊕ B} p (left (< p₀) P)
-                              (case (< q₀) Q R) ↝ cut p P Q
+                cut {A ⊕ B} (select (ch ⟨ < p₀ ⟩ inj₁ P) ⟨ p ⟩
+                             case (ch ⟨ < q₀ ⟩ (Q , R))) ↝ cut (P ⟨ p ⟩ Q)
 \end{code}
 
-There is not much more to note here except again for the multiple
-quantifications over the trivial splittings $\Context_i \simeq
-\AgdaInductiveConstructor{[]} + \Context_i$ and the use of
-\AgdaInductiveConstructor{<} to make sure that the channel referred to by
-\AgdaInductiveConstructor{left} and \AgdaInductiveConstructor{case} is indeed
-the one restricted by the cut.
+There is not much to note here except again for the multiple quantifications
+over the trivial splittings $\Context_i \simeq \AgdaInductiveConstructor{[]} +
+\Context_i$ and the use of \AgdaInductiveConstructor{<} to make sure that the
+channel referred to by \AgdaInductiveConstructor{select} and
+\AgdaInductiveConstructor{case} is indeed the one restricted by the cut.
 
 \begin{code}[hide]
-  r-right     : ∀{Γ₁ Γ₂ A B P Q R}
+  r-select-r  : ∀{Γ₁ Γ₂ A B P Q R}
                 (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) →
-                cut {A ⊕ B} p (right (< p₀) P)
-                              (case (< q₀) Q R) ↝ cut p P R
+                cut {A ⊕ B} (select (ch ⟨ < p₀ ⟩ inj₂ P) ⟨ p ⟩
+                             case (ch ⟨ < q₀ ⟩ (Q , R))) ↝ cut (P ⟨ p ⟩ R)
   r-fork      : ∀{Γ₁ Γ₂ Γ₃ Δ A B P Q R}
                 (p : Γ ≃ Δ + Γ₃) (p₀ : Γ₃ ≃ [] + Γ₃) (q : Δ ≃ Γ₁ + Γ₂) (q₀ : Δ ≃ [] + Δ) →
                 let _ , p′ , q′ = +-assoc-l p q in
-                cut {A ⊗ B} p (fork (< q₀) q P Q)
-                              (join (< p₀) R) ↝ cut q′ P (cut (> p′) Q R)
+                cut {A ⊗ B} (fork (ch ⟨ < q₀ ⟩ (P ⟨ q ⟩ Q)) ⟨ p ⟩
+                             join (ch ⟨ < p₀ ⟩ R)) ↝ cut (P ⟨ q′ ⟩ cut (Q ⟨ > p′ ⟩ R))
   r-client    : ∀{Γ₁ Γ₂ A P Q}
-                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
-                cut {`! A} p (server (< p₀) un P) (client (< q₀) Q) ↝ cut p P Q
+                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₂) →
+                cut {`? A} (client (ch ⟨ < p₀ ⟩ P) ⟨ p ⟩ server (ch ⟨ < q₀ ⟩ (un , Q))) ↝
+                cut (P ⟨ p ⟩ Q)
   r-weaken    : ∀{Γ₁ Γ₂ A P Q}
-                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
-                cut {`! A} p (server (< p₀) un P)
-                             (weaken (< q₀) Q) ↝ weakening un p Q
+                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₂) →
+                cut {`? A} (weaken (ch ⟨ < p₀ ⟩ P) ⟨ p ⟩ server (ch ⟨ < q₀ ⟩ (un , Q))) ↝
+                weakening (un ⟨ +-comm p ⟩ P)
   r-contract  : ∀{Γ₁ Γ₂ A P Q}
-                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₁) →
-                cut {`! A} p (server (< p₀) un P)
-                             (contract (< q₀) Q) ↝
-                    contraction un p
-                      (cut ++≃+ (server (< p₀) un P)
-                      (cut (> p) (server (< p₀) un P) Q))
+                (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) (un : Un Γ₂) →
+                cut {`? A} (contract (ch ⟨ < p₀ ⟩ P) ⟨ p ⟩ server (ch ⟨ < q₀ ⟩ (un , Q))) ↝
+                contraction un (+-comm p) (cut (server (ch ⟨ < q₀ ⟩ (un , Q)) ⟨ ++≃+ ⟩
+                                           cut (server (ch ⟨ < q₀ ⟩ (un , Q)) ⟨ > +-comm p ⟩ P)))
 \end{code}
 
 The remaining constructors that describe the base reductions follow a similar
 pattern, noting that the implementation of \RWeaken and \RContract makes use of
 auxiliary functions that respectively weaken and contract the typing context of
 the resulting process as shown in \Cref{tab:semantics}. It is worth glancing at
-\RExists since it involves a non-trivial rewriting of types:
+the implementation of \RExists since it involves a non-trivial rewriting of
+types:
 
 \begin{code}
   r-exists     : ∀{A B Γ₁ Γ₂ P F}
                  (p : Γ ≃ Γ₁ + Γ₂) (p₀ : Γ₁ ≃ [] + Γ₁) (q₀ : Γ₂ ≃ [] + Γ₂) →
-                 cut {`∃ A} p (ex {_} {B} (< p₀) P) (all (< q₀) F) ↝ cut p P (F B)
+                 cut {`∃ A} (ex {A} {B} (ch ⟨ < p₀ ⟩ P) ⟨ p ⟩ all (ch ⟨ < q₀ ⟩ F)) ↝
+                 cut (P ⟨ p ⟩ F B)
 \end{code}
 
 Recalling the definitions of \AgdaInductiveConstructor{ex} and
 \AgdaInductiveConstructor{all} from \Cref{sec:process-agda}, we note that $P$
 has type
-$\AgdaDatatype{Process}~(\AgdaFunction{subst}~[~B~/\_]~A~\AgdaInductiveConstructor{∷}~\Context_1)$
+$\AgdaDatatype{Proc}~(\AgdaFunction{subst}~[~B~/]~A~\AgdaInductiveConstructor{∷}~\Context_1)$
 and $(F~B)$ is a process of type
-$\AgdaDatatype{Process}~(\AgdaFunction{subst}~[~B~/\_]~(\AgdaFunction{dual}~A)~\AgdaInductiveConstructor{∷}~\Context_2)$.
+$\AgdaDatatype{Proc}~(\AgdaFunction{subst}~[~B~/]~(\AgdaFunction{dual}~A)~\AgdaInductiveConstructor{∷}~\Context_2)$.
 In order for these two process to be composable in a cut, it must be the case
-that $\AgdaFunction{subst}~[~B~/\_]~(\AgdaFunction{dual}~A) \equiv
-\AgdaFunction{dual}~(\AgdaFunction{subst}~[~B~/\_]~A)$, which was proved in
+that $\AgdaFunction{subst}~[~B~/]~(\AgdaFunction{dual}~A) \equiv
+\AgdaFunction{dual}~(\AgdaFunction{subst}~[~B~/]~A)$, which was proved in
 \Cref{sec:type-agda} under the name \AgdaFunction{dual-subst}. Thanks to the
 implicit rewriting rule, we do not have to rewrite the index in the type of
 $(F~B)$, which is silently accepted as is.
@@ -170,6 +171,6 @@ below:
 
 \begin{code}
   r-cut        : ∀{Γ₁ Γ₂ A P Q R} (q : Γ ≃ Γ₁ + Γ₂) →
-                 P ↝ Q → cut {A} q P R ↝ cut q Q R
+                 P ↝ Q → cut {A} (P ⟨ q ⟩ R) ↝ cut (Q ⟨ q ⟩ R)
   r-cong       : ∀{P R Q} → P ⊒ R → R ↝ Q → P ↝ Q
 \end{code}
